@@ -16,7 +16,8 @@ WARNING+=     "WITHOUT_${opt} is unsupported, use WITHOUT=${opt} on the command 
 
 ALL_UNSUPPORTED=	WITHOUT_NLS NOPORTDOCS NOPORTEXAMPLES WITH_BDB_VER \
 			OVERRIDE_LINUX_BASE_PORT WITH_OPENSSL_PORT \
-			WITH_OPENSSL_BASE
+			WITH_OPENSSL_BASE PYTHON_DEFAULT_VERSION \
+			PYTHON2_DEFAULT_VERSION PYTHON3_DEFAULT_VERSION
 ALL_DEPRECATED=		
 ALL_NOTNEEDED=		WITH_NEW_XORG WITHOUT_NEW_XORG WITH_KMS WITHOUT_KMS
 
@@ -31,6 +32,9 @@ WITH_NEW_XORG_ALT=	"removed and has no effect"
 WITHOUT_NEW_XORG_ALT=	${WITH_NEW_XORG_ALT}
 WITH_MKS_ALT=	"removed and has no effect"
 WITHOUT_MKS_ALT=	${WITH_MKS_ALT}
+PYTHON_DEFAULT_VERSION_ALT=	"DEFAULT_VERSIONS=python=${PYTHON_DEFAULT_VERSION:S/^python//}"
+PYTHON2_DEFAULT_VERSION_ALT=	"DEFAULT_VERSIONS=python2=${PYTHON2_DEFAULT_VERSION:S/^python//}"
+PYTHON3_DEFAULT_VERSION_ALT=	"DEFAULT_VERSIONS=python3=${PYTHON3_DEFAULT_VERSION:S/^python//}"
 
 .for a in ${ALL_DEPRECATED}
 .if defined(${a})
